laporan_error.txt
=== PENYEBAB UTAMA MANIFEST MERGER GAGAL ===
> Task :app:createDebugCompatibleScreenManifests
> Task :app:extractDeepLinksDebug
> Task :app:mergeDebugResources
> Task :app:parseDebugLocalResources
> Task :app:processDebugMainManifest
> Task :app:processDebugManifest
> Task :app:mergeDebugShaders
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets
> Task :app:compressDebugAssets
> Task :app:desugarDebugFileDependencies
> Task :app:processDebugJavaRes NO-SOURCE
> Task :app:processDebugManifestForPackage
> Task :app:checkDebugDuplicateClasses
> Task :app:mergeDebugJavaResource
> Task :app:processDebugResources
> Task :app:mergeExtDexDebug

> Task :app:compileDebugJavaWithJavac FAILED
/home/runner/work/NovaAgen.v2/NovaAgen.v2/app/src/main/java/com/nova/agent/MainActivity.java:269: error: cannot find symbol
            if (service.getId().contains(ActionAssistantService.class.getSimpleName())) {
                                         ^
  symbol:   class ActionAssistantService
  location: class MainActivity
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.
